unix/lang/tests/error/error_in_subr.yab
#expect#---Error in error_in_subr.yab, line 16:
#expect#---Error: can't find label '10' (not in this sub)
#expect#     goto 10
#expect#          ^~
#expect#---Dump: sub bar() called in error_in_subr.yab,12
#expect#---Dump: sub foo() called in error_in_subr.yab,9
#expect#---Error: Program stopped due to an error

foo(-1)

sub foo(x)
  bar(x)
end sub

sub bar(x)
  goto 10
end sub

